@startuml
title Class Diagram : View Products (UC09)

' Controller
class ProductViewController {
    - productService: ProductService
    - recentlyViewedService: RecentlyViewedService
    + category(keyword: String, minPrice: Double, maxPrice: Double, pageable: Pageable, model: Model) : String
    + productDetail(productId: Long, model: Model) : String
    - getCurrentUserEmail() : String
}

class ProductController {
    - productService: ProductService
    + getProducts(keyword: String, minPrice: Double, maxPrice: Double, pageable: Pageable) : ResponseEntity<Page<ProductSummaryResponseDTO>>
    + getProductDetail(productId: Long) : ResponseEntity<ProductDetailResponseDTO>
}

' Service

interface ProductService <<interface>> {
    + getProducts(keyword: String, minPrice: Double, maxPrice: Double, pageable: Pageable) : Page<ProductSummaryResponseDTO>
    + getProductDetail(productId: Long) : ProductDetailResponseDTO
    + getRelatedProducts(productId: Long, limit: int) : List<ProductSummaryResponseDTO>
}

class ProductServiceImpl {
    - productRepository : ProductRepository
    + getProducts(keyword: String, minPrice: Double, maxPrice: Double, pageable: Pageable) : Page<ProductSummaryResponseDTO>
    + getProductDetail(productId: Long) : ProductDetailResponseDTO
    + getRelatedProducts(productId: Long, limit: int) : List<ProductSummaryResponseDTO>
}

' Repository

interface ProductRepository <<interface>> {
    + findFiltered(keyword: String, minPrice: Double, maxPrice: Double, pageable: Pageable) : Page<Product>
    + findByCategoryIds(categoryIds: List<Long>, pageable: Pageable) : Page<Product>
}

' DTO

class ProductSummaryResponseDTO {
    - productId : Long
    - name : String
    - price : Double
    - category : String
    - subcategory : String
    - status : ProductStatus
    - primaryImageUrl : String
    - hoverImageUrl : String
    - minPrice : Double
    - averageRating : Double
    - reviewCount : Long
    - totalStock : Long
    - variantCount : Integer
}

class ProductDetailResponseDTO {
    - productId : Long
    - name : String
    - price : Double
    - category : String
    - categoryId : Long
    - description : String
    - status : ProductStatus
    - mainImage : String
    - hoverImage : String
    - minPrice : Double
    - categoryName : String
    - images : List<ProductImageDTO>
    - variants : List<ProductVariantDTO>
    - reviews : List<ReviewDTO>
    - averageRating : Double
    - reviewCount : Long
}

' Entity

class Product {
    - id : Long
    - name : String
    - description : String
    - status : ProductStatus
}

class ProductVariant {
    - id : Long
    - size : String
    - color : String
    - stockQuantity : Long
    - price : Double
}

class Review {
    - id : Long
    - rating : int
    - comment : String
}

class ProductImage {
    - id : Long
    - url : String
    - color : String
}

' Relationships

Product "1" *-- "0..*" ProductImage : has >
Product "1" *-- "0..*" ProductVariant : has >
Product "1" *-- "0..*" Review : receives >

' Class implement Interface
ProductServiceImpl ..|> ProductService

' Dependency Injection
ProductViewController --> ProductService: - productService
ProductController --> ProductService: - productService
ProductServiceImpl --> ProductRepository: - productRepository

' Object Usage
ProductController ..> ProductSummaryResponseDTO : <<returns>>
ProductController ..> ProductDetailResponseDTO : <<returns>>
ProductViewController ..> ProductSummaryResponseDTO : <<uses>>
ProductViewController ..> ProductDetailResponseDTO : <<uses>>

ProductServiceImpl ..> ProductSummaryResponseDTO : <<creates>>
ProductServiceImpl ..> ProductDetailResponseDTO : <<creates>>
ProductServiceImpl ..> Product : <<uses>>
ProductRepository ..> Product : <<manages>>

@enduml